--- a/app/src/main/res/layout/fragment_black_diary.xml
+++ b/app/src/main/res/layout/fragment_black_diary.xml
@@ -125,7 +125,7 @@
             </LinearLayout>
 
             <Switch
-                android:id="@+id/sw_lie"
+                android:id="@+id/sw_lie_owe"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
