[Dialog block + block foreign number] done !

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="colorPurpleBG">#4B0082</color>
     <color name="colorBlack">#000000</color>
     <color name="colorGray">#DFDEDE</color>
-    <color name="colorRed">#DA2006</color>
+    <color name="colorRed">#a90939</color>
     <color name="colorLavender">#f2d9f6</color>
     <color name="colorDarkGray">#919090</color>
     <color name="colorDarkLateBlue">#42437a</color>
