--- a/app/src/main/res/layout/activity_detail_contact.xml
+++ b/app/src/main/res/layout/activity_detail_contact.xml
@@ -194,6 +194,7 @@
                 android:textStyle="bold" />
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/ln_block"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
