--- a/app/src/main/res/layout/item_person_diary.xml
+++ b/app/src/main/res/layout/item_person_diary.xml
@@ -1,27 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="75dp">
-    <RelativeLayout
+    android:layout_height="wrap_content">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
         >
-        <TextView
-            android:id="@+id/tv_name_person"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:text="Anh Hoang Vu"
-            android:textSize="20sp"
-            android:textColor="@color/colorBlack"
-            android:paddingLeft="15dp"
-            android:layout_centerVertical="true"
-            />
+            android:orientation="horizontal"
+            android:layout_margin="10dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                >
+                <TextView
+                    android:id="@+id/tv_name_person"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="Anh Hoang Vu"
+                    android:textSize="20sp"
+                    android:textColor="@color/colorBlack"
+                    android:paddingLeft="15dp"
+                    android:layout_centerVertical="true"
+                    />
+            </LinearLayout>
+        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="3dp"
-            android:layout_alignParentBottom="true"
-            android:background="@color/colorGray"/>
-    </RelativeLayout>
-
+            android:background="@color/colorGray"
+            />
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
