--- a/app/src/main/res/layout/display_after_call_1.xml
+++ b/app/src/main/res/layout/display_after_call_1.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:padding="8dp"
     android:background="@drawable/bg_end_call_not_spam"
-    tools:context=".DialogOutgoingActivity">
+    tools:context=".DialogDisplayAfterCall1">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
