--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -47,7 +47,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
-
+                    <ImageView
+                        android:id="@+id/imgBlock"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:visibility="gone"
+                        android:src="@drawable/ic_block_official"
+                        android:layout_marginRight="10dp"/>
                     <ImageView
                         android:id="@+id/imgCall"
                         android:layout_width="20dp"
